--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,23 @@
     			<artifactId>json</artifactId>
     			<version>20171018</version>
 		</dependency>
+		<dependency>		  
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jul-to-slf4j</artifactId>
+		</dependency>
+		<dependency>
+	        <groupId>org.slf4j</groupId>
+	        <artifactId>log4j-over-slf4j</artifactId>
+	        <version>1.7.12</version>
+      	</dependency>
 	</dependencies>
 
 	<build>
