--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.mvc.view.prefix = /WEB-INF/views/
 spring.mvc.view.suffix = .jsp
 spring.mvc.static-path-pattern=/resources/**
+server.error.whitelabel.enabled=false
+server.error.include-stacktrace=always
 
 # Marklogic settings
 marklogic.host=localhost
@@ -9,7 +11,9 @@ marklogic.username=admin
 marklogic.password=admin
 marklogic.database=mylibrary-content
 
+#Logger configurations
 logging.level.root=INFO
+logging.file=log/mylibrary.log
 
 #Configuration for Pagination
 pageLimit=10
